add: tests + refactor

--- a/tests/data/project_demo/Dockerfile
+++ b/tests/data/project_demo/Dockerfile
@@ -1,2 +1,5 @@
 ARG ODOO_VERSION
-FROM isodoo:${ODOO_VERSION} AS isodoo-core
+FROM test:docker-isodoo-${ODOO_VERSION} AS isodoo-runtime
+FROM isodoo-runtime AS isodoo-runtime-private
+COPY --from=private --chown=odoo:odoo / /var/lib/odoo/private
+ENV OCONF_addons_path="${OCONF_addons_path},/var/lib/odoo/private" 
