--- a/tests/data/project_demo/docker-compose.yaml
+++ b/tests/data/project_demo/docker-compose.yaml
@@ -1,30 +1,6 @@
 services:
-  odoo:
-    build:
-      context: .
-      args:
-        ODOO_VERSION: ${ODOO_VERSION:-6.0}
-    depends_on:
-      - db
-    ports:
-      - '8080:8080'
-      - '8069:8069'
-    networks:
-      - frontend
-      - dbnet
-    environment:
-      ODOO_VERSION: ${ODOO_VERSION:-6.0}
-      OCONF_log_level: debug
-      OCONF_db_filter: odoodb$
-      OCONF_db_user: odoo
-      OCONF_db_password: odoo
-      OCONF_db_host: odoo-db
-      OCONF_db_name: odoodb
-      OCONF_proxy_mode: false
-    hostname: odoo
-
   db:
-    image: postgres:${PG_VERSION:-9.3}-alpine
+    image: postgres:${PYTEST_PG_VERSION:-9.3}-alpine
     networks:
       - dbnet
     environment:
@@ -33,11 +9,46 @@ services:
       POSTGRES_USER: odoo
       POSTGRES_INITDB_ARGS: --locale=C --encoding=UTF8
     hostname: odoo-db
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U odoo -d odoodb"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+
+  odoo:
+    build:
+      context: .
+      additional_contexts:
+        deps: ./v${PYTEST_ODOO_VERSION:-6.0}/deps
+        addons: ./v${PYTEST_ODOO_VERSION:-6.0}/addons
+        private: ./v${PYTEST_ODOO_VERSION:-6.0}/private
+    depends_on:
+      db:
+        condition: service_healthy
+    ports:
+      - '8080:8080'
+      - '8069:8069'
+    networks:
+      frontend:
+        ipv4_address: 10.99.2.38
+      dbnet:
+    environment:
+      OCONF_log_level: debug
+      OCONF_db_filter: odoodb$
+      OCONF_db_user: odoo
+      OCONF_db_password: odoo
+      OCONF_db_host: odoo-db
+      OCONF_db_name: odoodb
+      OCONF_proxy_mode: false
+      OCONF_workers: 0
+    hostname: odoo
 
 
 networks:
   frontend:
     driver: bridge
-    driver_opts:
-      com.docker.network.bridge.host_binding_ipv4: 127.0.0.1
+    ipam:
+      config:
+        - subnet: 10.99.0.0/16
   dbnet:
