--- a/.github/workflows/docker_auto.yml
+++ b/.github/workflows/docker_auto.yml
@@ -1,112 +1,73 @@
-name: Automatic build on release and push to Docker Hub
+name: Build & Publish Odoo Images (multi-version)
+
 on:
   schedule:
     - cron: "0 0 * * SUN"
   push:
     branches:
       - master
+  workflow_dispatch:
+
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+  LATEST_VERSION: "19.0"
+
 jobs:
-  tests:
-    uses: ./.github/workflows/test.yml
-  publish-docker-image:
+  build-and-push:
     runs-on: ubuntu-latest
-    needs:
-      - tests
-    env:
-      DOCKER_PLATFORMS: linux/amd64,linux/arm64
-      DOCKER_IMAGE: ghtardo/docker-privoxy-https
-      LASTEST_VERSION: "4.0.0"
-      PRIVOXY_VERSION: "4.0.0"
+    needs: pytest
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+      id-token: write
+
+    strategy:
+      matrix:
+        version: ["6.0", "6.1", "7.0", "8.0", "9.0", "10.0", "11.0", "12.0", "13.0", "14.0", "15.0", "16.0", "17.0", "18.0", "19.0"]
+
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+      - name: Checkout
+        uses: actions/checkout@v6
 
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v3
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=raw,value=${{ matrix.version }}
+            type=raw,value=latest,enable=${{ matrix.version == env.LATEST_VERSION }}
+          labels: |
+            org.opencontainers.image.title=Odoo ${{ matrix.version }}
+            org.opencontainers.image.description=Odoo Community ${{ matrix.version }} - isOdoo Image
+            org.opencontainers.image.source=https://github.com/${{ github.repository }}
+            org.opencontainers.image.vendor=GrupoIsonor
+            odoo.version=${{ matrix.version }}
 
-      - name: Login to Docker Hub
-        id: login
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Cache Docker layers
-        uses: actions/cache@v4
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-      - name: Check out repo
-        id: checkout
-        uses: actions/checkout@v4
-
-      - name: Prepare env variables
-        id: env
-        run: |
-          echo "BUILD_BRANCH=$(echo $GITHUB_REF | cut -d / -f 3 | cut -d. -f-2 | cut -d- -f1)" >> $GITHUB_ENV
-          echo "BUILD_VER=$(echo $GITHUB_REF | cut -d / -f 3)" >> $GITHUB_ENV
-          echo "BUILD_DATE=$(date +'%Y-%m-%d %H:%M:%S')" >> $GITHUB_ENV
-          echo "GIT_SHA=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_ENV
-          echo "GIT_REF=$(git symbolic-ref -q --short HEAD || git describe --tags --exact-match)" >> $GITHUB_ENV
-      - name: Build and push latest stable branch
-        if: ${{ env.BUILD_VER == env.LASTEST_VERSION }}
-        id: docker_build_latest
-        uses: docker/build-push-action@v5
+      - name: Build & Push
+        id: build-and-push
+        uses: docker/build-push-action@v6
         with:
           context: .
-          file: ./Dockerfile
-          builder: ${{ steps.buildx.outputs.name }}
-          platforms: ${{ env.DOCKER_PLATFORMS }}
-          build-args: |
-            PRIVOXY_VERSION=${{ env.PRIVOXY_VERSION }}
+          file: ./${{ matrix.version }}.Dockerfile
           push: true
-          target: runtime
-          labels: |
-            org.opencontainers.image.authors=${{ github.repository_owner }}
-            org.opencontainers.image.created=${{ env.BUILD_DATE }}
-            org.opencontainers.image.description=Created from commit ${{ env.GIT_SHA }} and ref ${{ env.GIT_REF }}
-            org.opencontainers.image.ref.name=${{ env.GIT_REF }}
-            org.opencontainers.image.revision=${{ github.sha }}
-            org.opencontainers.image.source=https://github.com/${{ github.repository }}
-            org.opencontainers.image.version=${{ env.BUILD_VER }}
-          tags: |
-            ${{ env.DOCKER_IMAGE }}:latest
-            ${{ env.DOCKER_IMAGE }}:${{ env.BUILD_BRANCH }}
-            ${{ env.DOCKER_IMAGE }}:${{ env.BUILD_VER }}
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-      - name: Build and push everything else
-        if: ${{ env.BUILD_VER != env.LASTEST_VERSION }}
-        id: docker_build_regular
-        uses: docker/build-push-action@v5
+      - name: Attest build provenance
+        uses: actions/attest-build-provenance@v2
         with:
-          context: .
-          file: ./Dockerfile
-          builder: ${{ steps.buildx.outputs.name }}
-          platforms: ${{ env.DOCKER_PLATFORMS }}
-          build-args: |
-            PRIVOXY_VERSION=${{ env.PRIVOXY_VERSION }}
-          push: true
-          target: runtime
-          labels: |
-            org.opencontainers.image.authors=${{ github.repository_owner }}
-            org.opencontainers.image.created=${{ env.BUILD_DATE }}
-            org.opencontainers.image.description=Created from commit ${{ env.GIT_SHA }} and ref ${{ env.GIT_REF }}
-            org.opencontainers.image.ref.name=${{ env.GIT_REF }}
-            org.opencontainers.image.revision=${{ github.sha }}
-            org.opencontainers.image.source=https://github.com/${{ github.repository }}
-            org.opencontainers.image.version=${{ env.BUILD_VER }}
-          tags: |
-            ${{ env.DOCKER_IMAGE }}:${{ env.BUILD_BRANCH }}
-            ${{ env.DOCKER_IMAGE }}:${{ env.BUILD_VER }}
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new
-
-      - name: Move cache
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          subject-digest: ${{ steps.build-and-push.outputs.digest }}
+          push-to-registry: true
