--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Main
 
 on:
   pull_request:
@@ -24,14 +24,20 @@ jobs:
         uses: actions/setup-python@v6
         with:
           python-version-file: "pyproject.toml"
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7
       - name: Restore pre-commit cache
         uses: actions/cache@v5
         with:
           path: ~/.cache/pre-commit
-          key: pre-commit-${{ runner.os }}-${{ hashFiles('.pre-commit-config.yaml') }}
+          key: pre-commit-${{ runner.os }}-${{ hashFiles('uv.lock') }}-${{ hashFiles('.pre-commit-config.yaml') }}
           restore-keys: |
+            pre-commit-${{ runner.os }}-${{ hashFiles('uv.lock') }}-${{ hashFiles('.pre-commit-config.yaml') }}
+            pre-commit-${{ runner.os }}-${{ hashFiles('uv.lock') }}
             pre-commit-${{ runner.os }}-${{ hashFiles('.pre-commit-config.yaml') }}
             pre-commit-${{ runner.os }}
+      - name: Install the project
+        run: uv sync --locked --all-extras --dev
       - uses: pre-commit/action@v3.0.1
 
   pytest:
