--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,7 +14,6 @@ repos:
     - id: hadolint
       name: hadolint (via uv + hadolint-py)
       entry: uv run --with git+https://github.com/AleksaC/hadolint-py.git@v2.14.0 hadolint
-      args: [--verbose]
-      language: system
+      language: python
       types: [dockerfile]
       pass_filenames: true
