--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,6 +88,11 @@ jobs:
       packages: write
       attestations: write
       id-token: write
+    env:
+      DEBIAN_FRONTEND: noninteractive
+      REGISTRY: ghcr.io
+      IMAGE_NAME: ${{ github.repository }}
+      LATEST_VERSION: "19.0"
 
     strategy:
       matrix:
@@ -130,10 +135,5 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-
-      - name: Attest build provenance
-        uses: actions/attest-build-provenance@v2
-        with:
-          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          subject-digest: ${{ steps.build-and-push.outputs.digest }}
-          push-to-registry: true
+          provenance: mode=max
+          sbom: true
