--- a/.github/workflows/isodoo.yml
+++ b/.github/workflows/isodoo.yml
@@ -1,4 +1,4 @@
-name: Main
+name: isOdoo
 
 on:
   pull_request:
@@ -15,17 +15,16 @@ jobs:
       PYTHONUNBUFFERED: 1
 
     steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Switch to current branch
-        run: git checkout ${{ env.BRANCH }}
+      - uses: actions/checkout@v6
+
       - name: "Set up Python"
         uses: actions/setup-python@v6
         with:
           python-version-file: "pyproject.toml"
+
       - name: Install uv
         uses: astral-sh/setup-uv@v7
+
       - name: Restore pre-commit cache
         uses: actions/cache@v5
         with:
@@ -36,6 +35,7 @@ jobs:
             pre-commit-${{ runner.os }}-${{ hashFiles('uv.lock') }}
             pre-commit-${{ runner.os }}-${{ hashFiles('.pre-commit-config.yaml') }}
             pre-commit-${{ runner.os }}
+
       - name: Install the project
         run: uv sync --locked --all-extras --dev
       - uses: pre-commit/action@v3.0.1
@@ -53,29 +53,31 @@ jobs:
       PYTHONUNBUFFERED: 1
 
     steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Switch to current branch
-        run: git checkout ${{ env.BRANCH }}
+      - uses: actions/checkout@v6
+
       - name: "Set up Python"
         uses: actions/setup-python@v6
         with:
           python-version-file: "pyproject.toml"
+
       - name: Install uv
         uses: astral-sh/setup-uv@v7
+
       - name: Restore uv cache
         uses: actions/cache@v5
         with:
-          path: /tmp/.uv-cache
+          path: ~/.cache/uv
           key: uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
           restore-keys: |
             uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
             uv-${{ runner.os }}
+
       - name: Install the project
         run: uv sync --locked --all-extras --dev
+
       - name: Run pytest
         run: uv run pytest --odoo-version ${{ matrix.odoo_version }} --no-cache -v
+
       - name: Minimize uv cache
         run: uv cache prune --ci
 
@@ -117,6 +119,13 @@ jobs:
             org.opencontainers.image.vendor=GrupoIsonor
             odoo.version=${{ matrix.version }}
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Login to GHCR
         uses: docker/login-action@v3
         with:
@@ -133,7 +142,8 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: type=gha,scope=odoo-${{ matrix.version }}
+          cache-to: type=gha,mode=max,scope=odoo-${{ matrix.version }}
           provenance: mode=max
           sbom: true
+          platforms: linux/amd64,linux/arm64
