--- a/.github/workflows/isodoo.yml
+++ b/.github/workflows/isodoo.yml
@@ -98,7 +98,17 @@ jobs:
 
     strategy:
       matrix:
-        version: ["6.0", "6.1", "7.0", "8.0", "9.0", "10.0", "11.0", "12.0", "13.0", "14.0", "15.0", "16.0", "17.0", "18.0", "19.0"]
+        version: ["6.0", "6.1", "7.0", "8.0", "9.0", "10.0", "11.0", "12.0", "13.0", "14.0", "15.0"]
+        platforms: ["linux/amd64"]
+        include:
+          - version: "16.0"
+            platforms: "linux/amd64,linux/arm64"
+          - version: "17.0"
+            platforms: "linux/amd64,linux/arm64"
+          - version: "18.0"
+            platforms: "linux/amd64,linux/arm64"
+          - version: "19.0"
+            platforms: "linux/amd64,linux/arm64"
 
     steps:
       - name: Checkout
@@ -146,4 +156,4 @@ jobs:
           cache-to: type=gha,mode=max,scope=odoo-${{ matrix.version }}
           provenance: mode=max
           sbom: true
-          platforms: linux/amd64,linux/arm64
+          platforms: ${{ matrix.platforms }}
