imp: auto config

--- a/tests/data/project_demo/Dockerfile
+++ b/tests/data/project_demo/Dockerfile
@@ -3,4 +3,4 @@ FROM test:docker-isodoo-${ODOO_VERSION} AS isodoo-runtime
 FROM isodoo-runtime AS isodoo-runtime-private
 # hadolint ignore=DL3022
 COPY --from=private --chown=odoo:odoo / /var/lib/odoo/private
-ENV OCONF_addons_path="${OCONF_addons_path},/var/lib/odoo/private"
+ENV OCONF__options__addons_path="${OCONF__options__addons_path},/var/lib/odoo/private"
