--- a/.github/workflows/imageql-analysis.yaml
+++ b/.github/workflows/imageql-analysis.yaml
@@ -9,6 +9,7 @@ on:
 
 permissions:
   contents: read
+  packages: read
   security-events: write
 
 jobs:
@@ -16,7 +17,7 @@ jobs:
     strategy:
       matrix:
         version: ["6.0", "6.1", "7.0", "8.0", "9.0", "10.0", "11.0", "12.0", "13.0", "14.0", "15.0", "16.0", "17.0", "18.0", "19.0"]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     if: ${{ github.event_name != 'workflow_run' || github.event.workflow_run.conclusion == 'success' }}
 
     steps:
@@ -26,9 +27,9 @@ jobs:
       - name: Run Trivy
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ghcr.io/${{ github.repository }}:${{ matrix.version }}
+          image-ref: ghcr.io/${{ toLower(github.repository) }}:${{ matrix.version }}
           format: sarif
-          output: trivy.sarif
+          output: trivy-${{ matrix.version }}.sarif
           severity: HIGH,CRITICAL
           exit-code: '1'
           ignore-unfixed: true
@@ -39,4 +40,4 @@ jobs:
         if: always()
         uses: github/codeql-action/upload-sarif@v3
         with:
-          sarif_file: trivy.sarif
+          sarif_file: trivy-${{ matrix.version }}.sarif
