--- a/.github/workflows/isodoo.yml
+++ b/.github/workflows/isodoo.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   pre-commit:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     env:
       DEBIAN_FRONTEND: noninteractive
       PYTHONDONTWRITEBYTECODE: 1
@@ -45,7 +45,7 @@ jobs:
       matrix:
         odoo_version: ["6.0", "6.1", "7.0", "8.0", "9.0", "10.0", "11.0", "12.0", "13.0", "14.0", "15.0", "16.0", "17.0", "18.0", "19.0"]
       fail-fast: false
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     needs: pre-commit
     env:
       DEBIAN_FRONTEND: noninteractive
@@ -83,7 +83,7 @@ jobs:
 
   build-and-push:
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     needs: pytest
     permissions:
       contents: read
